commit final (fotos)

--- a/formulario/formulario.html
+++ b/formulario/formulario.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1 id="h1">Imobiliária XYZ</h1>
+            <h1 id="h1">Viva Bela</h1>
             <nav id="nav">
                 <a class="site" href="inicio.html">Início</a>
                 <a class="site" href="catalago.html">Imóveis à Venda</a>
