--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -25,15 +25,15 @@
         <h2>Nossa Equipe</h2>
         <div class="team">
             <div class="team-member">
-                <img src="C:\Users\Dell\Desktop\ProjetoWeb\Imagens\daniel.jpg" alt="Foto do Daniel">
+                <img src="../assets/Daniel Servino.jpeg" alt="Foto do Daniel">
                 <p class="member-title">Daniel - CIO</p>
             </div>
             <div class="team-member">
-                <img src="C:\Users\Dell\Desktop\ProjetoWeb\Imagens\vine.jpg" alt="Foto do Vine">
+                <img src="../assets/Vinicius Hidalgo.jpeg" alt="Foto do Vine">
                 <p class="member-title">Vine - CO CIO</p>
             </div>
             <div class="team-member">
-                <img src="C:\Users\Dell\Desktop\ProjetoWeb\Imagens\otavio.jpg" alt="Foto do Otávio">
+                <img src="../assets/Otavio Rodrigues.jpeg" alt="Foto do Otávio">
                 <p class="member-title">Otávio - Gerente de Vendas</p>
             </div>
         </div>
