--- a/inicio.html
+++ b/inicio.html
@@ -13,7 +13,7 @@
         <div class="container">
             <h1 id="texto">Viva Bela</h1>
             <nav id="nav">
-                <a class="site" href="./inicio.html">Início</a>
+                <a class="site" href="./inicio/inicio.html">Início</a>
                 <a class="site" href="./catalogo/catalogo.html">Imóveis à Venda</a>
                 <a class="site" href="./formulario/formulario.html">Cadastro</a>
                 <a class="site" href="./sobre/sobre.html">Sobre Nós</a>
