--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -12,11 +12,11 @@
     <header class="header">
         <div class="container">
             <h1 id="main-heading">Viva Bela</h1>
-            <nav class="navigation">
-                <a class="nav-link" href="inicio.html">Início</a>
-                <a class="nav-link" href="catalago.html">Imóveis à Venda</a>
-                <a class="nav-link" href="formulario.html">Cadastro</a>
-                <a class="nav-link" href="sobre.html">Sobre Nós</a>
+            <nav id="nav">
+                <a class="site" href="./inicio/inicio.html">Início</a>
+                <a class="site" href="./catalogo/catalogo.html">Imóveis à Venda</a>
+                <a class="site" href="./formulario/formulario.html">Cadastro</a>
+                <a class="site" href="./sobre/sobre.html">Sobre Nós</a>
             </nav>
         </div>
     </header>
