--- a/catalogo/catalogo.html
+++ b/catalogo/catalogo.html
@@ -16,10 +16,10 @@
                 <p>Encontre o imóvel dos seus sonhos</p>
             </div>
             <nav id="nav">
-                <a class="site" href="./inicio/inicio.html">Início</a>
+                <a class="site" href="./inicio.html">Início</a>
                 <a class="site" href="./catalogo/catalogo.html">Imóveis à Venda</a>
-                <a class="site" href="./formulario/formulario.html">Cadastro</a>
-                <a class="site" href="./sobre/sobre.html">Sobre Nós</a>
+                <a class="site" href="../formulario/formulario.html">Cadastro</a>
+                <a class="site" href="../sobre/sobre.html">Sobre Nós</a>
             </nav>
         </div>
     </header>
