--- a/formulario/formulario.html
+++ b/formulario/formulario.html
@@ -11,10 +11,10 @@
         <div class="container">
             <h1 id="h1">Viva Bela</h1>
             <nav id="nav">
-                <a class="site" href="./inicio/inicio.html">Início</a>
-                <a class="site" href="./catalogo/catalogo.html">Imóveis à Venda</a>
+                <a class="site" href="./inicio.html">Início</a>
+                <a class="site" href="../catalogo/catalogo.html">Imóveis à Venda</a>
                 <a class="site" href="./formulario/formulario.html">Cadastro</a>
-                <a class="site" href="./sobre/sobre.html">Sobre Nós</a>
+                <a class="site" href="../sobre/sobre.html">Sobre Nós</a>
             </nav>
         </div>
     </header>
