--- a/catalogo/catalogo.html
+++ b/catalogo/catalogo.html
@@ -17,7 +17,7 @@
             </div>
             <nav id="nav">
                 <a class="site" href="../inicio.html">Início</a>
-                <a class="site" href="./catalogo.html">Imóveis à Venda</a>
+                <a class="site" href="catalogo.html">Imóveis à Venda</a>
                 <a class="site" href="../formulario/formulario.html">Cadastro</a>
                 <a class="site" href="../sobre/sobre.html">Sobre Nós</a>
             </nav>
