--- a/formulario/formulario.html
+++ b/formulario/formulario.html
@@ -7,6 +7,7 @@
     <title>Formulário de Cadastro</title>
 </head>
 <body>
+
     <header>
         <div class="container">
             <h1 id="h1">Viva Bela</h1>
@@ -20,38 +21,65 @@
     </header>
 
     <div class="forms">
-        <form id="cadastro-form" action="https://webhook.site/c0318a75-ac66-4359-b8f0-ff7cdc53c6b8" method="post">
+        <form id="cadastro-form" method="post">
             <h2>Cadastro</h2>
-            <label for="nome">Nome:</label><br>
-            <input type="text" id="nome" name="nome" required><br><br>
-            
-            <label for="genero">Selecione seu gênero:</label><br>
-            <select id="genero" name="genero" class="input-field" required><br><br>
-                <option value="masculino">Masculino</option>
-                <option value="feminino">Feminino</option>
-                <option value="outro">Prefiro não dizer</option>
-            </select><br><br>
 
-            <label for="cpf">CPF:</label><br>
-            <input type="text" id="cpf" name="cpf" required><br><br>
+            <label for="titulo">Titulo:</label><br>
+            <input type="text" id="titulo" name="titulo" required><br><br>
 
-            <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email" required><br><br>
+            <label for="qtd_quartos">Quantidade de quartos:</label><br>
+            <input type="number" id="qtd_quartos" name="qtd_quartos" required><br><br>
 
-            <label for="telefone">Telefone:</label><br>
-            <input type="tel" id="telefone" name="telefone" required><br><br>
+            <label for="qtd_banheiro">Quantidade de banheiros:</label><br>
+            <input type="number" id="qtd_banheiro" name="qtd_banheiro" required><br><br>
 
-            <label for="senha">Senha:</label><br>
-            <input type="password" id="senha" name="senha" required><br><br>
+            <label for="valor">Valor:</label><br>
+            <input type="number" id="valor" name="valor" required><br><br>
 
-            <label for="idade">Idade:</label><br>
-            <input type="number" id="idade" name="idade" min="18" required><br><br>
+            <label for="vagas">Quantidade de vagas:</label><br>
+            <input type="number" id="vagas" name="vagas" required><br><br>
 
-            <label for="cidade">Cidade:</label><br>
-            <input type="text" id="cidade" name="cidade" required><br><br>
+            <label for="descricao">Descriçao:</label><br>
+            <input type="text" id="descricao" name="descricao" required><br><br>
+
+            <label for="tamanho">Tamanho(m³):</label><br>
+            <input type="number" id="tamanho" name="tamanho" required><br><br>
+
+            <label for="endereco">Endereço:</label><br>
+            <input type="text" id="endereco" name="endereco" required><br><br>
 
             <input type="submit" value="Cadastrar">
         </form>
     </div>
+
+    <script>
+        const formulario = document.getElementById('cadastro-form');
+
+        document.addEventListener('DOMContentLoaded', function () {
+
+
+            formulario.addEventListener('submit', async function (e) {
+                e.preventDefault(); // Impede o envio padrão do formulário
+
+                const formData = new FormData(formulario);
+
+                try {
+                    const response = await fetch('http://127.0.0.1:8000/core/salvar/', {
+                        method: 'POST',
+                        body: formData
+                    });
+
+                    if (!response.ok) {
+                        throw new Error('Erro na requisição');
+                    }
+
+                } catch (error) {
+                    console.error('Erro:', error);
+                }
+            });
+        });
+    
+    </script>
+
 </body>
 </html>
