--- a/formulario/formulario.html
+++ b/formulario/formulario.html
@@ -42,11 +42,14 @@
             <label for="descricao">Descriçao:</label><br>
             <input type="text" id="descricao" name="descricao" required><br><br>
 
-            <label for="tamanho">Tamanho(m³):</label><br>
+            <label for="tamanho">Tamanho(m²):</label><br>
             <input type="number" id="tamanho" name="tamanho" required><br><br>
 
             <label for="endereco">Endereço:</label><br>
             <input type="text" id="endereco" name="endereco" required><br><br>
+
+            <label for="url_imagem">Imagem:</label><br>
+            <input type="text" id="url_imagem" name="url_imagem" required><br><br>
 
             <input type="submit" value="Cadastrar">
         </form>
