--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -30,7 +30,7 @@
             </div>
             <div class="team-member">
                 <img src="../assets/Vinicius Hidalgo.jpeg" alt="Foto do Vine">
-                <p class="member-title">Vine - CO CIO</p>
+                <p class="member-title">Vini - CO CIO</p>
             </div>
             <div class="team-member">
                 <img src="../assets/Otavio Rodrigues.jpeg" alt="Foto do Otávio">
