backend server config

--- a/catalogo/catalogo.html
+++ b/catalogo/catalogo.html
@@ -36,7 +36,7 @@
         const listaAnuncios = document.getElementById('lista-anuncios');
 
         
-        fetch('http://127.0.0.1:8000/core/')
+        fetch('https://potential-halibut-5gv67q9xg9v36xj-8000.app.github.dev/core/')
             .then(response => response.json())
             .then(data => {
                 
