--- a/formulario/formulario.html
+++ b/formulario/formulario.html
@@ -67,7 +67,7 @@
                 const formData = new FormData(formulario);
 
                 try {
-                    const response = await fetch('http://127.0.0.1:8000/core/salvar/', {
+                    const response = await fetch('https://potential-halibut-5gv67q9xg9v36xj-8000.app.github.dev/core/salvar/', {
                         method: 'POST',
                         body: formData
                     });
