adicionar a quantidade de quartos no catalogo

--- a/catalogo/catalogo.html
+++ b/catalogo/catalogo.html
@@ -56,6 +56,9 @@
                     const descricao = document.createElement('p');
                     descricao.textContent = campos.descricao;
 
+                    const qtd_quartos = document.createElement('p');
+                    qtd_quartos.textContent = campos.qtd_quartos;
+
                     const preco = document.createElement('p');
                     preco.textContent = `Preço: R$ ${campos.valor}`;
 
