adicionar a quantidade de quartos no catalogo 2.0

--- a/catalogo/catalogo.html
+++ b/catalogo/catalogo.html
@@ -67,6 +67,7 @@
                     divAnuncio.appendChild(h4);
                     divAnuncio.appendChild(descricao);
                     divAnuncio.appendChild(preco);
+                    divAnuncio.appendChild(qtd_quartos);
 
                     listaAnuncios.appendChild(divAnuncio);
                 });
