--- a/catalogo/catalogo.html
+++ b/catalogo/catalogo.html
@@ -57,7 +57,7 @@
                     descricao.textContent = campos.descricao;
 
                     const qtd_quartos = document.createElement('p');
-                    qtd_quartos.textContent = campos.qtd_quartos;
+                    qtd_quartos.textContent = `Quantidade de quartos: ${campos.qtd_quartos}`;
 
                     const preco = document.createElement('p');
                     preco.textContent = `Preço: R$ ${campos.valor}`;
