nao esta mostrando o catalogo

--- a/catalogo/catalogo.html
+++ b/catalogo/catalogo.html
@@ -79,6 +79,7 @@
                     divAnuncio.appendChild(h4);
                     divAnuncio.appendChild(descricao);
                     divAnuncio.appendChild(preco);
+                    divAnuncio.appendChild(qtd_quartos);
                     divAnuncio.appendChild(qtd_banheiro);
                     divAnuncio.appendChild(vagas);
                     divAnuncio.appendChild(tamanho);
