css/htm changed

--- a/inicio.html
+++ b/inicio.html
@@ -25,6 +25,7 @@
         </div>
     </div>
 
+    <div class="container-pro">
         <div class="sobre-pro">
             <h1>Os beneficios de se usar o sistema Viva Bela!</h1>
             <ol class="lista">
@@ -39,6 +40,7 @@
                 <p class="li">Anuncios e promoçoes.</p>
             </ol>
         </div>
+    </div>
 </body>
 
 </html>
