--- a/sobre/sobre.html
+++ b/sobre/sobre.html
@@ -24,18 +24,20 @@
     <div class="content">
         <h2>Nossa Equipe</h2>
         <div class="team">
+            <div class="container-team">
             <div class="team-member">
                 <img src="../assets/Daniel Servino.jpeg" alt="Foto do Daniel">
-                <p class="member-title">Daniel - CIO</p>
+                <p class="member-title"><h1>Daniel - CIO</h1></p>
             </div>
             <div class="team-member">
                 <img src="../assets/Vinicius Hidalgo.jpeg" alt="Foto do Vine">
-                <p class="member-title">Vini - CO CIO</p>
+                <p class="member-title"><h1>Vinícius - CO CIO</h1></p>
             </div>
             <div class="team-member">
                 <img src="../assets/Otavio Rodrigues.jpeg" alt="Foto do Otávio">
-                <p class="member-title">Otávio - Gerente de Vendas</p>
+                <p class="member-title"><h1>Otávio - CTO</h1></p>
             </div>
+        </div>
         </div>
     </div>
 </body>
