--- a/formulario/formulario.html
+++ b/formulario/formulario.html
@@ -62,7 +62,7 @@
 
 
             formulario.addEventListener('submit', async function (e) {
-                e.preventDefault(); // Impede o envio padrão do formulário
+                e.preventDefault()
 
                 const formData = new FormData(formulario);
 
