--- a/inicio.html
+++ b/inicio.html
@@ -22,18 +22,19 @@
     </header>
     <div class="bem_vindo">
         <h2>Bem-vindo</h2>
-        </div>
     </div>
+</div>
 
     <div class="container-pro">
         <div class="sobre-pro">
+<div class="sobre-pro">
             <h1>Os beneficios de se usar o sistema Viva Bela!</h1>
             <ol class="lista">
                 <p class="li">Capacidade de cadastrar e editar anuncios de imoveis.</p>
 
                 <p class="li">Ampla Variedade de Propriedades Exclusivas.</p>
 
-                <p class="li">Conteúdo Informativo e Atuapzado.</p>
+                <p class="li">Conteúdo Informativo e Atualizado.</p>
 
                 <p class="li">Melhores custo-beneficio, por nao precisar pagar a plataforma.</p>
 
